--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: https://riverlive.com
 
 google_analytics: UA-XXXXX-XX
 repo: http://github.com/jbilinski
-disqus_shortname: "jbilinski"
+disqus_shortname: "riverlive"
 comments: true
 
 # Build settings
