Starting some jekyll md post tests...

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   job      : "IT Infrastructure Engineer"
   bio      : "And now I shall replace myself with a small PowerShell script."
   email    : jbilinski+blog@gmail.com
-  url      : https://riverlive.com
+  url      : https://about.me/jbilinski
   github   : http://github.com/jbilinski
   twitter  : http://twitter.com/GravityNoob
   linkedin : http://linkedin.com/in/jbilinski
