update twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
   email    : jbilinski+blog@gmail.com
   url      : https://about.me/jbilinski
   github   : http://github.com/jbilinski
-  twitter  : http://twitter.com/GravityNoob
+  twitter  : http://twitter.com/ScriptOps
   linkedin : http://linkedin.com/in/jbilinski
   thumb    : http://gravatar.com/avatar/7ef7f59e6bfa3188f7999841f7382348
   # facebook : https://www.facebook.com/profile.php?id=123456789
