--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ destination: ./_site
 author:
   name     : "Jamie Bilinski"
   job      : "IT Infrastructure Engineer"
-  bio      : "Disruptive technologies are automating my work and obsoleting decades of knowledge! --it's about time."
+  bio      : "Disruptive technologies are automating my work and obsoleting decades of knowledge! --thanks, let me help with that."
   email    : jbilinski+blog@gmail.com
   url      : https://about.me/jbilinski
   github   : http://github.com/jbilinski
