disqus sn update

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: https://scriptops.com
 
 google_analytics: UA-79423450-1
 repo: http://github.com/jbilinski
-disqus_shortname: "riverlive"
+disqus_shortname: "scriptops"
 comments: true
 
 # Build settings
