reference corrections and spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "codeQL.createQuery.qlPackLocation": "/Users/jbilinski/repo/jbilinski.github.io"
+    "codeQL.createQuery.qlPackLocation": "/Users/jbilinski/repo/jbilinski.github.io",
+    "cSpell.enabled": true
 }
