--- a/_config.yml
+++ b/_config.yml
@@ -110,15 +110,16 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping: # optional, default to 'pathname'
-    strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    repo: jbilinski/jbilinski.github.io-discussion
+    repo_id: MDEwOlJlcG9zaXRvcnk0MDUyOTQ5MzI=
+    category: Post Discussions
+    category_id: DIC_kwDOGChPVM4B_A0Q
+    mapping: specific
+    term:{{ page.id }}
+    strict: 0
+    input_position: bottom
+    lang: en
+    reactions_enabled: 1
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
