--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # The Site Configuration
 
 # Import the theme
-theme: jekyll-theme-chirpy
+theme: chirpy
 lang: en
 timezone: America/Los_Angeles
 
