--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -5,7 +5,7 @@
 # documentation.
 
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Legacy: Deploy Jekyll site to Pages
+name: Legacy Deploy Jekyll site to Pages
 
 on:
   # Runs on pushes targeting the default branch
