--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,6 @@
 # Import the theme
 theme: jekyll-theme-chirpy
 
-
 lang: en
 timezone: America/Los_Angeles
 
@@ -90,7 +89,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/img/differenceengine.jpeg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
